// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/cargo/extract extractPackageFile() extracts multiple dependencies 1`] = `
Array [
  Object {
    "currentValue": "=0.2.43",
    "datasource": "cargo",
    "depName": "libc",
    "depType": "dependencies",
    "nestedVersion": false,
  },
  Object {
    "currentValue": "1.0.4",
    "datasource": "cargo",
    "depName": "bitflags",
    "depType": "dependencies",
    "nestedVersion": false,
  },
  Object {
    "currentValue": "=0.1",
    "datasource": "cargo",
    "depName": "pcap-sys",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "0.21.0",
    "datasource": "cargo",
    "depName": "pnet",
    "depType": "dependencies",
    "nestedVersion": true,
  },
  Object {
    "currentValue": "0.1.0",
    "datasource": "cargo",
    "depName": "git_dep_with_version",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "git-dependency",
  },
  Object {
    "currentValue": "",
    "datasource": "cargo",
    "depName": "git_dep",
    "depType": "dependencies",
    "nestedVersion": false,
    "skipReason": "git-dependency",
  },
  Object {
    "currentValue": "0.0.0",
    "datasource": "cargo",
    "depName": "same_version_1__",
    "depType": "dependencies",
    "nestedVersion": false,
  },
  Object {
    "currentValue": "0.0.0",
    "datasource": "cargo",
    "depName": "same_version_1_",
    "depType": "dependencies",
    "nestedVersion": false,
  },
  Object {
    "currentValue": "0.0.0",
    "datasource": "cargo",
    "depName": "same_version_1",
    "depType": "dependencies",
    "nestedVersion": false,
  },
  Object {
    "currentValue": "0.4.2",
    "datasource": "cargo",
    "depName": "dep1",
    "depType": "dependencies",
    "nestedVersion": true,
  },
  Object {
    "currentValue": "=0.3.6",
    "datasource": "cargo",
    "depName": "winapi",
    "depType": "dependencies",
    "nestedVersion": true,
    "target": "cfg(windows)",
  },
  Object {
    "currentValue": "0.2.37",
    "datasource": "cargo",
    "depName": "wasm-bindgen",
    "depType": "dependencies",
    "nestedVersion": false,
    "target": "cfg(target_arch = \\"wasm32\\")",
  },
  Object {
    "currentValue": "0.3.14",
    "datasource": "cargo",
    "depName": "js-sys",
    "depType": "dependencies",
    "nestedVersion": false,
    "target": "cfg(target_arch = \\"wasm32\\")",
  },
  Object {
    "currentValue": "",
    "datasource": "cargo",
    "depName": "js_relative_import",
    "depType": "dependencies",
    "nestedVersion": false,
    "skipReason": "path-dependency",
    "target": "cfg(target_arch = \\"wasm32\\")",
  },
  Object {
    "currentValue": "0.3.14",
    "datasource": "cargo",
    "depName": "web-sys",
    "depType": "dependencies",
    "nestedVersion": true,
    "target": "cfg(target_arch = \\"wasm32\\")",
  },
]
`;

exports[`lib/manager/cargo/extract extractPackageFile() extracts multiple dependencies 2`] = `
Array [
  Object {
    "currentValue": "0.2.0",
    "datasource": "cargo",
    "depName": "amethyst_animation",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "0.3.0",
    "datasource": "cargo",
    "depName": "amethyst_assets",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "0.2.0",
    "datasource": "cargo",
    "depName": "amethyst_audio",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "0.6.0",
    "datasource": "cargo",
    "depName": "amethyst_config",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "0.2.0",
    "datasource": "cargo",
    "depName": "amethyst_core",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "0.1.0",
    "datasource": "cargo",
    "depName": "amethyst_controls",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "0.1.0",
    "datasource": "cargo",
    "depName": "amethyst_locale",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "0.7",
    "datasource": "cargo",
    "depName": "amethyst_renderer",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "0.3",
    "datasource": "cargo",
    "depName": "amethyst_input",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "0.2",
    "datasource": "cargo",
    "depName": "amethyst_ui",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "0.2",
    "datasource": "cargo",
    "depName": "amethyst_utils",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "1.0",
    "datasource": "cargo",
    "depName": "derivative",
    "depType": "dependencies",
    "nestedVersion": false,
  },
  Object {
    "currentValue": "0.5",
    "datasource": "cargo",
    "depName": "fern",
    "depType": "dependencies",
    "nestedVersion": true,
  },
  Object {
    "currentValue": "0.4",
    "datasource": "cargo",
    "depName": "log",
    "depType": "dependencies",
    "nestedVersion": false,
  },
  Object {
    "currentValue": "1.0.1",
    "datasource": "cargo",
    "depName": "rayon",
    "depType": "dependencies",
    "nestedVersion": false,
  },
  Object {
    "currentValue": "0.1",
    "datasource": "cargo",
    "depName": "rustc_version_runtime",
    "depType": "dependencies",
    "nestedVersion": false,
  },
  Object {
    "currentValue": "0.15",
    "datasource": "cargo",
    "depName": "winit",
    "depType": "dependencies",
    "nestedVersion": false,
  },
  Object {
    "currentValue": "0.1",
    "datasource": "cargo",
    "depName": "thread_profiler",
    "depType": "dependencies",
    "nestedVersion": true,
  },
  Object {
    "currentValue": "0.2",
    "datasource": "cargo",
    "depName": "amethyst_gltf",
    "depType": "dev-dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "0.5.10",
    "datasource": "cargo",
    "depName": "env_logger",
    "depType": "dev-dependencies",
    "nestedVersion": false,
  },
  Object {
    "currentValue": "0.6",
    "datasource": "cargo",
    "depName": "genmesh",
    "depType": "dev-dependencies",
    "nestedVersion": false,
  },
  Object {
    "currentValue": "0.2",
    "datasource": "cargo",
    "depName": "ron",
    "depType": "dev-dependencies",
    "nestedVersion": false,
  },
  Object {
    "currentValue": "1.0",
    "datasource": "cargo",
    "depName": "serde",
    "depType": "dev-dependencies",
    "nestedVersion": false,
  },
  Object {
    "currentValue": "1.0",
    "datasource": "cargo",
    "depName": "serde_derive",
    "depType": "dev-dependencies",
    "nestedVersion": false,
  },
  Object {
    "currentValue": "0.1",
    "datasource": "cargo",
    "depName": "vergen",
    "depType": "build-dependencies",
    "nestedVersion": false,
  },
]
`;

exports[`lib/manager/cargo/extract extractPackageFile() extracts platform specific dependencies 1`] = `
Array [
  Object {
    "currentValue": "0.2.37",
    "datasource": "cargo",
    "depName": "wasm-bindgen",
    "depType": "dependencies",
    "nestedVersion": false,
    "target": "cfg(target_arch = \\"wasm32\\")",
  },
  Object {
    "currentValue": "0.3.14",
    "datasource": "cargo",
    "depName": "js-sys",
    "depType": "dependencies",
    "nestedVersion": false,
    "target": "cfg(target_arch = \\"wasm32\\")",
  },
  Object {
    "currentValue": "",
    "datasource": "cargo",
    "depName": "js_relative_import",
    "depType": "dependencies",
    "nestedVersion": false,
    "skipReason": "path-dependency",
    "target": "cfg(target_arch = \\"wasm32\\")",
  },
  Object {
    "currentValue": "0.3.14",
    "datasource": "cargo",
    "depName": "web-sys",
    "depType": "dependencies",
    "nestedVersion": true,
    "target": "cfg(target_arch = \\"wasm32\\")",
  },
]
`;

exports[`lib/manager/cargo/extract extractPackageFile() handles inline tables 1`] = `
Array [
  Object {
    "currentValue": "0.1",
    "datasource": "cargo",
    "depName": "pcap-sys",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "0.21.0",
    "datasource": "cargo",
    "depName": "pnet",
    "depType": "dependencies",
    "nestedVersion": true,
  },
  Object {
    "currentValue": "1.2",
    "datasource": "cargo",
    "depName": "dep1",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "3.4",
    "datasource": "cargo",
    "depName": "dep2",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "~12.3.1",
    "datasource": "cargo",
    "depName": "dep3",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "INVALID 3.3.1 VERSION",
    "datasource": "cargo",
    "depName": "dep4",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "unknown-version",
  },
  Object {
    "currentValue": "3.2.1",
    "datasource": "cargo",
    "depName": "dep5",
    "depType": "dependencies",
    "nestedVersion": true,
  },
  Object {
    "currentValue": "",
    "datasource": "cargo",
    "depName": "dep6",
    "depType": "dependencies",
    "nestedVersion": false,
    "skipReason": "invalid-dependency-specification",
  },
]
`;

exports[`lib/manager/cargo/extract extractPackageFile() handles standard tables 1`] = `
Array [
  Object {
    "currentValue": "1.2",
    "datasource": "cargo",
    "depName": "dep1",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "3.4",
    "datasource": "cargo",
    "depName": "dep2",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "~12.3.1",
    "datasource": "cargo",
    "depName": "dep3",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "INVALID 1.3.1 VERSION",
    "datasource": "cargo",
    "depName": "dep4",
    "depType": "dependencies",
    "nestedVersion": true,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "",
    "datasource": "cargo",
    "depName": "dep5",
    "depType": "dependencies",
    "nestedVersion": false,
    "skipReason": "path-dependency",
  },
  Object {
    "currentValue": "",
    "datasource": "cargo",
    "depName": "dep7",
    "depType": "dependencies",
    "nestedVersion": false,
    "skipReason": "invalid-dependency-specification",
  },
]
`;
